I started the css page over to comprees the code. I felt i had to much going on which was casuing positioning and overflow problems. I also fixed the font size of the navbar and the header-text.

--- a/styles.css
+++ b/styles.css
@@ -7,21 +7,48 @@
 .header-container {
     background-color:black;
     color: white;
-    padding: 10px 40px 20px;
-    height: 250px;
+    padding: 10px 100px 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;
+    align-items: center;
+    padding-bottom: 60px;
 }
 
 .header-content {
+    display: flex;
+    align-items: center;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+.header-text p {
+    font-size: 16px;
+}
+
+button {
+    background-color: aqua;
+    width: 80px;
+    border-radius: 90px;
 }
 
 ul {
     list-style: none;
-    display: flex;
     gap: 10px;
+    display: flex;
+    flex-shrink: 1;
+    font-size: x-small;
+}
+
+
+img {
+    width: 250px;
+    height: 150px;
 }
